--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -13,7 +13,7 @@ default.not.inlist.message=La propiedad [{0}] con valor [{2}] no esta contenido 
 default.blank.message=La propiedad [{0}] no puede ser vacía
 default.not.equal.message=La propiedad [{0}] con valor [{2}] no puede igualar a [{3}]
 default.null.message=La propiedad [{0}] no puede ser nulo
-default.not.unique.message=La propiedad [{0}] con valor [{2}] debe ser única
+default.not.unique.message=El [{0}] con valor [{2}] ya existe
 
 default.paginate.prev=Anterior
 default.paginate.next=Siguiente
