Cambio de diseno total

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,3 +57,4 @@ typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
 
 #Kahuu Servicios
 kahuu.index.bienvenidos= Bienvenidos!
+kahuu.kahuu = Kahuu
